next: work on categorising jobs from link

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,36 @@
-<ul>
-  <% @categories.each do |category| %>
-    <li>
-      <%= link_to category.name, category_path(category) %>
-      <ol>
-        <% category.posts.each do  |post| %>
-          <li><%= link_to post.title, post_path(post)  %></li>
-        <% end  %>
-      </ol>
-    </li>
-  <% end %>
-</ul>
+
+category.index
+
+Search 
+
+
+
+    <%= form_tag categories_path, :method => 'get' do %>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search" %>
+    <% end %>
+
+
+    <table>
+
+    <thead>
+    <tr>
+    <th>Name</th>
+    
+    
+    </tr>
+    </thead>
+    
+
+
+    <tbody>
+    <% @categories.each do |c| %>
+        <tr>
+        <td><%= link_to c.name, jobs_path %>
+        </tr>       
+    <% end %>
+
+   
+    </tbody>
+    </table>
+    
