--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,8 @@
 show/category
-<h1><%= @category.name %> - <%= pluralize(@category.jobss.count, "jobss") %></h1>
 
 <ol>
-    <% @category.jobs.each do  |job| %>
-      <li><%= link_to job.title, job_path(job)  %></li>
+    <% @job.categories.each do  |c| %>
+      <li><%= c.title  %></li>
     <% end  %>
 </ol>
 
