--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,17 @@
 
   <body>
 
-  <%= link_to "Log Out", logout_path,  method: :delete%>
+  <% if logged_in? %>
+<%= link_to "All Categories", categories_path %> |
+<%= link_to "Post Your Job", user_path(current_user)%> |
+<%= link_to "Log Out", logout_path,  method: :delete%>
+    <% else %>
+<%= link_to "Sign up", signup_path %>
+<br><br>
+<%= link_to "Log in", "/signin"%>
+  <% end %>
+
+  
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
     <%= yield %>
