--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-Wllcome <h1><%= @user.username %></h1>
+Wllcome <h1><%= @user.firstName %></h1>
 
 <%= link_to "Create Job Details", new_job_path %>
