--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,9 @@
 show/category
 
+<h1><%= @category.name %> - <%= pluralize(@category.jobs.count, "jobs") %></h1>
+
 <ol>
-    <% @job.categories.each do  |c| %>
-      <li><%= c.title  %></li>
+    <% @category.jobs.each do  |job| %>
+      <li><%= link_to job.title, job_path(job)  %></li>
     <% end  %>
 </ol>
-
