--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,11 +1,10 @@
 <h3>  job.show.html</h3>
 
 
-<h1>Your post was succesufuly created<h1>
+<h1>Your Job<h1>
 
 <h1><%= @job.title %></h1>
-<h2><%= @job.user.username %></h2>
-<h2>By: <%=link_to @job.user.username, user_path(@job.user)%> </h2>
+<h2>By: <%=link_to @job.user.firstName, user_path(@job.user)%> </h2>
 
 
 <h3>Category: <%= @job.category.try(:name)%></h3>
@@ -13,8 +12,9 @@
 <h4><%= link_to "Edit Service", edit_job_path(@job)%></h4>
 <% end %>
 
-<div><%= @job.service %></div>
+<div><h3><%= @job.service %></h3></div>
 
+<%= link_to "Edit", edit_job_path(job) %>
 
 <p><%= link_to 'Add a new Review', new_job_review_path(@job) %></p>
 
@@ -27,6 +27,8 @@
 <strong><%= c.user.username %></strong> "<%= link_to c.description, job_review_path(@job, c) %>" at <%= c.updated_at.strftime("%I:%M %p on %m/%d/%Y") %>
 </li>
 <% end %>
+
+
 <% end %>
 
 
