category doesnt work

--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -19,7 +19,7 @@ job edit
 <%= f.label :title %>
 <%= f.text_field :title, placeholder: "Company Name" %><br><br>
 <%= f.label :service %>
-<%= f.text_field :servive, placeholder: "Service"%><br><br>
+<%= f.text_field :service, placeholder: "Service"%><br><br>
 <%= f.label :phone %>
 <%= f.number_field :phone, placeholder: "Phone Number" %><br><br>
 <%= f.label :email %>
