--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,12 +5,6 @@ Search
 
 
 
-    <%= form_tag categories_path, :method => 'get' do %>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search" %>
-    <% end %>
-
-
     <h1>Name</h1>
     
 
@@ -20,6 +14,11 @@ Search
     <li>
       <%= link_to category.name, category_path(category) %>
       
+      <ol>
+        <% category.jobs.each do  |job| %>
+          <li><%= link_to job.title, jobs_path  %></li>
+        <% end  %>
+      </ol>
     </li>
   <% end %>
 </ul>
