--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
-Wllcome <h1><%= @user.firstName %></h1>
+Wllcome </h1>
 
-<%= link_to "Create Job Details", new_job_path %>
+<br><div class = "container">
+    <div class="title"><%= @user.firstName %></div>
+    </div>
+
+<br><%= link_to "Create Job Details", new_job_path %>
+
