--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,24 +4,18 @@ category.index
 Search 
 
 
+    <div class = "container">
+    <div class="title"> Choose Category </div>
+    </div>
 
-    <h1>Name</h1>
-    
 
-
-    <ul>
+    <table id="categories">
   <% @categories.each do |category| %>
-    <li>
-      <%= link_to category.name, category_path(category) %>
-      
-      <ol>
-        <% category.jobs.each do  |job| %>
-          <li><%= link_to job.title, jobs_path  %></li>
-        <% end  %>
-      </ol>
-    </li>
+    <tr>
+    <td> <%= link_to category.name, category_path(category) %></td> 
+      </tr>
   <% end %>
-</ul>
+</table>
 
-    </table>
-    
+
+      
