--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,7 +1,11 @@
 <h3>job new.html</h3>
-<h1>Build Job</h1>
 
-<%= form_for(@job) do |f| %>
+<br><div class = "container">
+    <div class="title">Build Job</div>
+    </div>
+
+
+<br><%= form_for(@job) do |f| %>
 
     <%= f.label "Choose a Category" %>
     <%= f.collection_select  :category_id, Category.all, :id, :name, include_blank: true%>
