--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -2,6 +2,7 @@
 
 
 <h1>Your Job<h1>
+<%= image_tag @movie.image.url(:medium) %>
 
 <h3><%= @job.title %></h3>
 <h2>By: <%=link_to @job.user.firstName, user_path(@job.user)%> </h2>
@@ -14,14 +15,14 @@
 <div><h3><%= @job.phone %></h3></div>
 <% if @job.user == current_user %>
 <h4><%= link_to "Edit", edit_job_path(@job)%></h4>
+<%= link_to 'All Jobs', jobs_path %>
 <% end %>
 
 
 
 
 
-<p><%= link_to 'Add a new Review', new_job_review_path(@job) %></p>
-
+<p><%= link_to 'Add a Review', new_job_review_path(@job) %></p>
 
 <% if !@job.reviews.empty? %>
 <p><%= link_to 'See all reviews', job_reviews_path(@job)%></p>
