working on nav bar search

--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -4,7 +4,7 @@ job edit
 
 <%= render partial: "layouts/errors", locals: {object: @job} %>
 
-<%= form_for(@job) do |f|%>
+<%= form_for @job, html: { multipart: true } do |f|%>
 
   <%= f.label "Choose a category:" %>
   <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: true %>
