--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -10,6 +10,7 @@ index/job
 
   
     <tr>
+    <th>Profile Picture</th>
     <th>Company Name</th>
     <th>Company Service</th>
     <th>Company Category</th>
