--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -36,9 +36,9 @@
     <%= f.label :email %>
     <%= f.text_field :email, placeholder: "Email" %>
     <br><br>
-
+<p class="btn btn-primary">
     <%= f.submit %>
-
+</p>
     <% end %>
 
     </div>
