--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,39 +13,33 @@
 
   <body>
 
-<nav class="navbar navbar-default" role="navigation">
-<div class="container">
-<div class="navbar=header">
-<button type="button" class="navbar-toggle collapse" data-toggle="colapse" data-target="#bs-example-navbar-colapse-1">
-<span class="sr-only"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-</div>
+
 
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 <ul class="nav navbar-nav">
 <% if logged_in? %>
-<%= link_to "All Categories", categories_path %> |
-<li><%= link_to "Post Your Job", user_path(current_user)%></li> |
-<li><%= link_to "Log Out", logout_path,  method: :delete%></li>
+<%= link_to "All Categories", categories_path %>|
+<%= link_to "Post Your Job", user_path(current_user)%>|
+<%= link_to "Log Out", logout_path,  method: :delete%><br><br>|
+<%= link_to "Your Reviews", current_user %><br>
+
+
     <% else %>
 <li><%= link_to "Sign up", signup_path %></li>
 <br><br>
 <li><%= link_to "Log in", "/signin"%></li>
   <% end %>
-  
 </ul>
-<form class-"navbar-form navbar-right" role="search">
-<div class="form-group">
-<input type="text" class="form-control" placeholder="Search">
+<%= form_tag search_jobs_path, method: :get, class: "navbar-from navbar-right", role: "search" do %>
+<p>
+<%= text_field_tag :search, params[:search], class: "form-contol"%>
+<%= submit_tag "Search", name: nil, class:"btn btn-default" %>
+</p>
+
+<% end %>
+
 </div>
-<button type="submit" class="btn btn-default">Submit</button>
-</form>
-</div>
-</div>
-</nav>
+
 
 
 
