--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,7 +9,8 @@ index/job
     <div class="table-responsive">
     <table class="table">
     <tbody>
-  <% @jobs.each do |job| %>
+      <% @jobs.each do |job| %>
+
   <tr>
   <td> <%= image_tag job.image.url(:medium)  %>  </td>
   </tr>
@@ -45,24 +46,27 @@ index/job
   <td>   <%= job.email %></td>
   </tr>
 
-  
-  
+  <tr>
+  <td><span>(<%= link_to  pluralize(job.reviews.size, 'review') %>)</span></td>
 
+  </tr>
   
     
-    <% if job.user == current_user%>
+    <% if job.user == current_user %>
+    <tr>
     <td><%= link_to "Edit" , edit_job_path(job), class: "btn btn-danger" %></td>
     <td><%= link_to 'Destroy', job, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?'  } %></td>
     </tr>
     <% end %>
-  <% end %>
+
+    
 
   <tr>
   <td></td>
   </tr>
-  
-  </tbody>
-</table>
+  <% end %>
+   </tbody>
+   </table>
     </div> 
     </div>
     </div>
