working on omniauth

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,13 +1,11 @@
 index/job
+<h1>All Jobs</h1>
 
-    <div class="panel panel-default">
-    <div class="panel-body">
-    <div class="row">
-    <div class="col-md-4">
-    
-    
-    <div class="table-responsive">
-    <table class="table">
+    <div class="container" >
+    <fieldset>
+    <div  class="row">
+    <div class="col-12 col-lg-3 col-md-6 box d-flex">
+    <table class="table table-dark" >
     <tbody>
       <% @jobs.each do |job| %>
 
@@ -15,11 +13,12 @@ index/job
   <td> <%= image_tag job.image.url(:medium)  %>  </td>
   </tr>
   
-    
+  
   <tr>
   <td><strong>Company Name</strong></td>
   <td>   <%= job.title %></td>
   </tr>
+  
   
   <tr>
   <td><strong>Company Service</strong></td>
@@ -48,7 +47,6 @@ index/job
 
   <tr>
   <td><span>(<%= link_to  pluralize(job.reviews.size, 'review') %>)</span></td>
-
   </tr>
   
     
@@ -59,16 +57,19 @@ index/job
     </tr>
     <% end %>
 
-    
-
   <tr>
-  <td></td>
+  <td>   </td>
   </tr>
+
+
   <% end %>
    </tbody>
    </table>
+  
+   
     </div> 
     </div>
+    </fieldset>
     </div>
-    </div>
-    </div>
+  
+    
