categoy build form

--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -22,7 +22,7 @@ job edit
 <%= f.label :service %>
 <%= f.text_field :service, placeholder: "Service"%><br><br>
 <%= f.label :phone %>
-<%= f.number_field :phone, placeholder: "Phone Number" %><br><br>
+<%= f.text_field :phone, placeholder: "Phone Number" %><br><br>
 <%= f.label :email %>
 <%= f.email_field :email, placeholder: "Busness Email" %><br><br>
 
