--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -46,7 +46,7 @@ index/job
   </tr>
 
   <tr>
-  <td><span>(<%= link_to  pluralize(job.reviews.size, 'review') %>)</span></td>
+  <td><span>(<%= pluralize(job.reviews.size, 'review') %>)</span></td>
   </tr>
   
     
