--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
-<h1>show.reviews</h1>
+<h1>Reviews</h1>
 <strong><h2>Comment:</h2><strong>
 <h3><%= @review.description %></h3>
 <strong><h2>User:</h2></strong>
