--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-Wllcome </h1>
+<h1>Wllcome </h1>
 
 
 <br><div class = "container">
@@ -11,7 +11,8 @@ Wllcome </h1>
         
         <div class="img-thumbnail">
         <ul class="row">
-        <li class="listt"><%= link_to (image_tag job.image.url(:medium), class: 'image'), job %></li>
+        <h2><%= job.title%></h2>
+        <li class="listt"><%= link_to (image_tag job.image.url(:medium), class: 'image'), job %> </li>
         </ul>
         
         </div>
