--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,6 +3,6 @@
 
 <ol>
     <% @category.jobs.each do  |job| %>
-      <li><%= link_to job.title, job_path(job)  %></li>
+      <li><%= link_to job.title, job_path(job), class:"btn btn-default"  %></li>
     <% end  %>
 </ol>
