--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,13 @@
 <li><%= link_to "Post Your Job", user_path(current_user), class:"btn btn-default" %></li>
 <li><%= link_to 'All Jobs', jobs_path, class:"btn btn-default" %></li>
 <li><%= link_to "Your Reviews", current_user, class:"btn btn-default"  %></li>
-<li><%= link_to "Log Out", logout_path,  method: :delete, class:"btn btn-default" %></li>
+<li><%= link_to "Log Out", logout_path,  method: :delete, class:"btn btn-default" %></li><br><br>
+<br><br><div class="form">
+<form action="/search">
+<li><input name="q" type = "text" placehold="search", class="form-control"/></li><br>
+<button type="submit", class="btn btn-primary"> Search</button>
+</form>
+</div>
 
 
 
