--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,7 +119,11 @@ h1 {
   background: -o-linear-gradient(left, black, #eee, black);
 }
 
-
+// .form{
+//   display: flex;
+//   position: relative
+//   // border: 3px solid green;
+// }
 // ul#list {
 //   height:250px;
 //   width:350px;
