--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,7 +6,7 @@
     <div class="col-12 col-lg-3 col-md-6 box d-flex">
     <table class="table table-dark" >
     <tbody>
-      <% @jobs.each do |job| %>
+      <% @jobs.recent.ordered_by_title.each do |job| %>
 
   <tr>
   <td> <%= image_tag job.image.url(:medium)  %>  </td>
