added scope and search category bar ,the end

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 <li><%= link_to "Log Out", logout_path,  method: :delete, class:"btn btn-default" %></li><br><br>
 <br><br><div class="form">
 <form action="/search">
+<h3>Search by Category</h3>
 <li><input name="q" type = "text" placehold="search", class="form-control"/></li><br>
 <button type="submit", class="btn btn-primary"> Search</button>
 </form>
